<resources>
    <string name="app_name">WorkOut App</string>
    <string name="str_training">Training</string>
    <string name="str_routines">Routines</string>
    <string name="str_calculator">Calculator</string>
    <string name="str_diet_tips">Diet Tips</string>
    <string name="str_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="abs">v crunch</string>
    <string name="abs1">clapping crunches</string>
    <string name="abs10">dumbbell crunches</string>
    <string name="abs11">dumbbell crunch and punches</string>
    <string name="abs12">side leg rise left</string>
    <string name="abs13">side leg rise Right</string>
    <string name="abs14">lying twist stretch right</string>
    <string name="abs15">one down two ups</string>
    <string name="abs16">dumbbell toe touch crunch right</string>
    <string name="abs17">dumbbell toe touch crunch Left</string>
    <string name="abs18">v hold</string>
    <string name="abs19">dumbbell bicycle passes</string>
    <string name="abs2">flutter kicks</string>
    <string name="abs20">dumbbell torture tucks</string>
    <string name="abs21">seated abs counterclockwise</string>
    <string name="abs22">seated abs clockwise</string>
    <string name="abs23">ninty crunch</string>
    <string name="abs24">dumbbell side bend right</string>
    <string name="abs25">dumbbell side bend Left</string>
    <string name="abs26">cross knee plank</string>
    <string name="abs27">oblique v ups left</string>
    <string name="abs28">oblique v ups Right</string>
    <string name="abs29">crunches with legs raised</string>
    <string name="abs3">plank</string>
    <string name="abs30">alt v up</string>
    <string name="abs31">lying twist stretch left</string>
    <string name="abs32">childs pose</string>
    <string name="abs33">cobra stretch</string>
    <string name="abs34">side plank left</string>
    <string name="abs35">side plank Right</string>
    <string name="abs36">dumbbell russian twist</string>
    <string name="abs37">v up</string>
    <string name="abs38">side crunches right</string>
    <string name="abs39">side crunches left</string>
    <string name="abs4">reverse crunches</string>
    <string name="abs40">sit up twist</string>
    <string name="abs41">heels to the heaven</string>
    <string name="abs42">heel touch</string>
    <string name="abs5">bent leg twist</string>
    <string name="abs6">bicycle crunches</string>
    <string name="abs7">cross arm crunches</string>
    <string name="abs8">x man crunch</string>
    <string name="abs9">dumbbell paddle boats</string>
    <string name="abs_title">Abs workout</string>
    <string name="advbellyfattip1">High intake of sugar is bad for health,sugary drinks like carbonated drinks,fruit juice etc,are high in sugar which means they are high in calories,avoid sugary drinks if you want to lose weight.</string>
    <string name="advbellyfattip10">Make sure you follow a healthy diet,a healthy diet for weight loss includes fruits, vegetables, healthy fats, protein rich foods and fibrous foods,a healthy diet contains foods which are low in calories and helps in weight loss.</string>
    <string name="advbellyfattip10title">Eat healthy</string>
    <string name="advbellyfattip11">Black coffee contains caffeine which increases your metabolism and makes you energetic,consumption of black coffee helps to burn calories,do not add sugar or any high-calorie sweeteners to your coffee,drinking black coffee regularly results in weight loss.</string>
    <string name="advbellyfattip11title">Consume black coffee</string>
    <string name="advbellyfattip12">Eggs are high in protein and low in calories,eating whole eggs for breakfast makes you full and reduces cravings for more food which helps in weight loss.</string>
    <string name="advbellyfattip12title">Eat whole eggs</string>
    <string name="advbellyfattip13">Drinking water helps in weight loss,drinking sufficient quantity of water boosts metabolism and helps to burn calories in your body,the quantity of water intake per day for adult male is 4 liters and for adult female is 3 liters.</string>
    <string name="advbellyfattip13title">Drink adequate quantity of water</string>
    <string name="advbellyfattip14">Green tea contains caffeine and a flavonoid called catechin,catechin helps to break down excess fat in your body,the Caffeine present in green tea boosts your metabolism and helps to burn calories which results in weight loss.</string>
    <string name="advbellyfattip14title">Drink green tea</string>
    <string name="advbellyfattip15">Eat around 4 to 5 dates as a snack,dates are rich in fiber and low in calories,dates makes you feel full and this reduces cravings for more food which results in weight loss.</string>
    <string name="advbellyfattip15title">Eat dates as a snack</string>
    <string name="advbellyfattip16">Eat fiber rich fruits like Oranges, Strawberries, Banana etc,during brunch,fruits rich in fiber makes you feel full which reduces cravings for more food and this results in weight loss.</string>
    <string name="advbellyfattip16title">Consume fruits during brunch</string>
    <string name="advbellyfattip17">Make sure you eat carbohydrates in their original form,consume less refined carbohydrates like red rice, whole wheat bread, whole wheat pasta and oats,less refined carbohydrates are rich in fiber and makes you feel full which reduces cravings for more food and this helps in weight loss.</string>
    <string name="advbellyfattip17title">Consume carbohydrates in their original form</string>
    <string name="advbellyfattip18">Vegetable salads are low in calories and rich in fiber which helps you to lose weight,prepare vegetable salads using beans, olive oil, lemon juice, vinegar, pepper and leafy greens like lettuce, spinach, kale etc.</string>
    <string name="advbellyfattip18title">Include vegetable salads in your diet</string>
    <string name="advbellyfattip19">High stress levels causes weight gain,feeling stressed results in cravings for junk foods like sweet, pizza, burgers, doughnuts etc,perform activities like yoga to keep your stress under control.</string>
    <string name="advbellyfattip19title">Manage stress to lose weight</string>
    <string name="advbellyfattip1title">Avoid sugary drinks</string>
    <string name="advbellyfattip2">Performing cardio exercises like running, cycling, swimming, jumping rope etc,helps you to burn calories,cardio exercises also reduces belly fat in your body,Belly fat decreases your metabolism and causes weight gain,do cardio exercises regularly to lose weight.</string>
    <string name="advbellyfattip20">Cook food using healthy oils like olive oil, avocado oil and sesame oil,these oils are low in calories unlike other refined oils and helps to lose weight,make sure that you use only a small quantity of these oils while cooking.</string>
    <string name="advbellyfattip20title">Choose healthy oils</string>
    <string name="days">Days</string>
    <string name="fri">Friday</string>
    <string name="healthy_weight_desc">Keep up the good work! For tips on maintaining a healthy weight, check out the food and diet and fitness sections.</string>
    <string name="healthy_weight_header">Healthy weight</string>
    <string name="may_not_give">You may not give blood if:</string>
    <string name="may_not_give_desc">‣ You have had a serious illness or major surgery in the past or are currently on medication. The reason you are taking medication may prevent you from giving blood.\n\n‣ You have had complicated dental work. Simple fillings as OK after 24 hours; simple extractions are OK after 7 days.\n\n‣ You have been in contact with an infectious disease or have been given certain immunisation in the last 4 weeks.\n\n‣ You are presently on a hospital waiting list or undergoing medical tests.\n\n‣ You have got or had any heart conditions.\n\n‣ You do not weigh over 7stone 12lbs (50kgs). Please note, if you are female and aged between 17 and 19 years, weigh less than 10stone 3lbs (65kgs) and are less than 5’6” (168cm) in height, we need to confirm your estimated blood volume is over 3500ml.</string>
    <string name="monday">Monday</string>
    <string name="obese_desc">The best way to lose weight if you\'re obese is through a combination of diet and exercise, and, in some cases, medicines. See a doctor for help and advice.</string>
    <string name="obese_header">Obese</string>
    <string name="overweight_desc">The best way to lose weight if you\'re overweight is through a combination of diet and exercise. The BMI calculator will give you a personal calorie allowance to help you achieve a healthy weight safely.</string>
    <string name="overweight_header">Overweight</string>
    <string name="pregnancy_desc2">‣ You should not give blood if you are pregnant or you are a woman who has had a baby in the last 6 months.\n\n‣ You can donate if you are breast feeding.\n\n‣ If you have had a miscarriage or termination before 12 weeks it may be possible for you to donate.</string>
    <string name="pregnancy_header">Pregnancy</string>
    <string name="sat">Saturday</string>
    <string name="should_never_give">You should never give blood if:</string>
    <string name="should_never_give_12">You should not give blood for 12 months after sex with:</string>
    <string name="should_never_give__desc">‣ A man who has sex with another man (if you’re a female).\n\n‣ A commercial sex worker.\n\n‣ Anyone who has ever injected themselves with drugs.\n\n‣ Anyone with haemophilia or a related blood clotting disorder who has received clotting factor concentrates.\n\n‣ Anyone of any race, who has been sexually active in parts of the world where AIDS/HIV is very common. This includes countries in Africa.</string>
    <string name="should_never_give_desc">‣ You have ever had syphilis, HTLV (Human T Cell lymphotropic Virus), HIV or Hepatitis C.\n\n‣ You are a man who has had anal or oral sex with another man with or without a condom.\n\n‣ You’ve ever worked as a commercial sex worker.\n\n‣ You’ve ever injected yourself with drugs – even once.</string>
    <string name="should_not_donate">You should not give blood if:</string>
    <string name="should_not_donate_desc">‣ You are a male donor with less than 12 weeks interval between donations.\n\n‣ You are a female donor with less than 16 weeks interval between donations.\n\n‣ You have a sore throat, chesty cough or active cold sore. You can donate once you are feeling well (end of a cold is OK) and the cold sore is dry and healing.\n\n‣ You are currently taking antibiotics or you have just finished a course within the last 7 days or have had an infection in the last 2 weeks.\n\n‣ You have had hepatitis or jaundice in the last 12 months.\n\n‣ You have had a tattoo, semi-permanent make up or any cosmetic treatments that involves skin piercing in the last 12 months.\n\n‣ You have had acupuncture in the last 12 months, unless this was done within the NHS or by a qualified Healthcare Professional registered with a statutory body.\n\n‣ A member of your family (parent, brother, sister or child) has suffered with CJD (Creutzfeld-Jakob Disease).\n\n‣ You have ever received human pituitary extract (which was used in some growth hormone or fertility treatments before 1985)\n\n‣ You have received blood or think you may have received blood during the course of any medical treatment or procedure anywhere in the world since 1 January 1980.</string>
    <string name="sun">Sunday</string>
    <string name="thursday">Thursday</string>
    <string name="tu">Tuesday</string>
    <string name="underweight_desc">Being underweight could be a sign you\'re not eating enough or you may be ill. If you\'re underweight, a doctor can help.</string>
    <string name="underweight_header">Underweight</string>
    <string name="wed">Wednesday</string>
    <string name="time">Time</string>
</resources>