<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/NavTraining"
            android:icon="@drawable/training"
            android:title="@string/str_training" />
        <item
            android:id="@+id/NavRoutines"
            android:icon="@drawable/routines"
            android:title="@string/str_routines" />
        <item
            android:id="@+id/NavCalculator"
            android:icon="@drawable/calculator"
            android:title="@string/str_calculator" />
        <item
            android:id="@+id/NavDietTips"
            android:icon="@drawable/diet_tips"
            android:title="@string/str_diet_tips" />
        <item
            android:id="@+id/NavProfile"
            android:icon="@drawable/profile"
            android:title="@string/str_profile" />

    </group>
</menu>
